Added correct angular aspects

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                         </td>
                       </tr>
                       <tr>
-                        <td>1</td>
+                        <td>{{ (numUsers || 3)*(testTime/60) }}</td>
                         <td>
                           Conduct {{ (testingOrInterview == "Test" ? "testing" : "interview" || "testing/interview") }} session with users.
                         </td>
                       </tr>
                       <tr>
-                        <td>1</td>
+                        <td>{{ (numUsers || 3)*(testTime/60) }}</td>
                         <td>
                           Synthesize result & draw insights for {{ (testingOrInterview == "Test" ? "testing" : "interview") || "testing/interview" }}.
                         </td>
@@ -73,8 +73,11 @@
                       </select>
                     </p>
 
-                    <p>Ideally, how many users would you recruit for your tests?</p>
-                    <input type="number" ng-model="numUsers">
+                    <p>Ideally, how many users would you recruit for your tests?
+                    <input type="number" ng-model="numUsers"></p>
+
+                    <p>How many minutes will your test take?
+                    <input type="number" ng-model="testTime"></p>
                 </div>
             </div>
         </div>
