Added links to the URG section

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                       <tr>
                         <td>1</td>
                         <td>
-                          Read the URG Office's guide to writing a proposal.
+                          Read the URG Office's guide to <a href="http://undergradresearch.northwestern.edu/proposal-writing">writing a proposal</a>.
                         </td>
                       </tr>
                       <tr>
@@ -133,13 +133,13 @@
                       <tr>
                         <td>1</td>
                         <td>
-                         Schedule a URG advising appointment to get feedback or contact Peter Civetta.
+                         <a href="http://undergradresearch.northwestern.edu/advising-request">Schedule a URG advising appointment</a> to get feedback or contact <a href="mailto:p-civetta@northwestern.edu">Peter Civetta</a>.
                         </td>
                       </tr>
                       <tr>
                         <td>1</td>
                         <td>
-                          Get feedback from former URG winners in DTR.
+                          Get feedback from <a href="https://docs.google.com/document/d/1nJf7dEatZ0hCnvXcTuqrXth-2WcItjEQgAI-WEr2hPk/edit#bookmark=id.5vc33dcujca">former URG winners</a> in DTR.
                         </td>
                       </tr>
                       <tr>
@@ -157,7 +157,7 @@
                       <tr>
                         <td>1</td>
                         <td>
-                          Submit your grant via the URG submission portal.
+                          Submit your grant via the <a href="http://undergradresearch.northwestern.edu/how-apply">URG submission portal</a>.
                         </td>
                       </tr>                     
                     </table>
