Added panel colors and https to bootstrap min so it works statically.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <title>Best Practices</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
@@ -23,7 +23,7 @@
       <h3>Best Practices</h3>
 
       <div class="panel-group" id="accordion">
-        <div class="panel panel-default">
+        <div class="panel panel-primary">
             <div class="panel-heading">
                 <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">User Testing/Interview Planning</a>
@@ -84,7 +84,7 @@
                     <p>How many minutes will your test/interview take?
                     <input type="number" ng-model="testTime" min="0"></p>
 
-                    <div class="panel panel-default">
+                    <div class="panel panel-success">
                       <div class="panel-heading">Food for Thought</div>
                       <div class="panel-body">
                         How are you ensuring that your {{ (testingOrInterview == "Test" ? "testing" : "interview" || "testing/interview") }} helps you answer the important questions you have for each concept? <br><br>
@@ -104,7 +104,7 @@
                 </div>
             </div>
         </div>
-        <div class="panel panel-default">
+        <div class="panel panel-primary">
             <div class="panel-heading">
                 <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">Writing A URG Grant</a>
@@ -164,7 +164,7 @@
                     </table>
                   </div>
 
-                    <!-- <div class="panel panel-default">
+                    <!-- <div class="panel panel-primary">
                       <div class="panel-heading">Food for Thought</div>
                       <div class="panel-body">
                         <ul>
@@ -177,7 +177,7 @@
             </div>
         </div>
 
-        <div class="panel panel-default">
+        <div class="panel panel-primary">
             <div class="panel-heading">
                 <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">Technology</a>
@@ -213,7 +213,7 @@
                     </table>
                   </div>
 
-                    <div class="panel panel-default">
+                    <div class="panel panel-success">
                       <div class="panel-heading">Food for Thought</div>
                       <div class="panel-body">
                         What are your solutions to potential roadblocks?<br><br>
