Added Prototyping story

--- a/index.html
+++ b/index.html
@@ -226,6 +226,47 @@
         </div>
 
 
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">Prototyping</a>
+                </h4>
+            </div>
+            <div id="collapseFour" class="panel-collapse collapse">
+                <div class="panel-body">
+                  <strong><p>Gold-Standard Story</p></strong>
+                  <div class="table-responsive">
+                    <table class="table table-bordered">
+                      <thead>
+                        <td>Points</td>
+                        <td>Tasks</td>
+                      </thead>
+                      <tr>
+                        <td>3</td>
+                        <td>
+                          Determine 5 representative tasks for design outcomes.
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>3</td>
+                        <td>
+                          Draw 3 Storyboards from representative tasks.
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>3</td>
+                        <td>
+                         Make 2 paper prototypes.
+                        </td>
+                      </tr>                   
+                    </table>
+                  </div>
+
+                </div>
+            </div>
+        </div>
+
+
     </div>
   </body>
 </html>
