Added Design Arguments practices. This one will need to be edited

--- a/index.html
+++ b/index.html
@@ -329,6 +329,64 @@
             </div>
         </div>
 
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseSix">Design Arguments</a>
+                </h4>
+            </div>
+            <div id="collapseSix" class="panel-collapse collapse">
+                <div class="panel-body">
+                  <strong><p>Gold-Standard Story</p></strong>
+                  <div class="table-responsive">
+                    <table class="table table-bordered">
+                      <thead>
+                        <td>Points</td>
+                        <td>Tasks</td>
+                      </thead>
+                      <tr>
+                        <td>0.5</td>
+                        <td>
+                          List all project stakeholders.
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>1</td>
+                        <td>
+                          Determine the design outcomes for each stakeholder class.
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>3</td>
+                        <td>
+                         For each outcome, list the current user needs.
+                        </td>
+                      </tr> 
+                      <tr>
+                        <td>2</td>
+                        <td>
+                         Define design needs that the solution must include in order to address the user needs.
+                        </td>
+                      </tr>  
+                      <tr>
+                        <td>3</td>
+                        <td>
+                         For each outcome, list design arguments that detail what features the solution should include.
+                        </td>
+                      </tr> 
+                      <tr>
+                        <td>1</td>
+                        <td>
+                         Detail how each design argument would be implemented (specify technologies/approaches).
+                        </td>
+                      </tr>                     
+                    </table>
+                  </div>
+                  
+                </div>
+            </div>
+        </div>
+
 
     </div>
   </body>
