Removed copy tasks button that isn't working

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
             </div>
             <div id="collapseOne" class="panel-collapse collapse">
                 <div class="panel-body">
-                  <strong><p>Gold-Standard Story
-                    <button type="button" id="copy-usertesting" class="btn btn-primary">Copy Tasks</button></p></strong>
+                  <strong><p>Gold-Standard Story</p></strong>
                   <div class="table-responsive">
                     <table class="table table-bordered">
                       <thead>
