removed spelling mistake from Personas gold standard story

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                       </tr>
                       <tr>
                         <td>
-                          Write out a 3-4 paragraph profile that summarizes key attributes about the subject's background background and personality.
+                          Write out a 3-4 paragraph profile that summarizes key attributes about the subject's background and personality.
                         </td>
                         <td>{{ numPersonas || 1 }}</td>
                       </tr>
