First round of code cleaning - added some comments to head and moved styles to CSS file

--- a/index.html
+++ b/index.html
@@ -4,19 +4,16 @@
   <head>
     <title>Best Practices</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Add in Bootstrap & jQuery -->
     <link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+    <!-- Add in Angular for front-end binding -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
+
     <link rel="stylesheet" type="text/css" href="main.css">
-    <style>
-      .container {
-        max-width: 1000px;
-      }
-      .panel-default .panel-title{
-        font-size: 0.9em;
-      }
-    </style>
   </head>
   <body ng-app="">
     <div class="container-fluid">
@@ -157,15 +154,6 @@
                       </tr>                     
                     </table>
                   </div>
-
-                    <!-- <div class="panel panel-primary">
-                      <div class="panel-heading">Food for Thought</div>
-                      <div class="panel-body">
-                        <ul>
-                          <li>Check out the DTR Doc.</li>
-                        </ul>
-                      </div>
-                    </div> -->
 
                 </div>
             </div>
