--- a/dtr-bars/index.html
+++ b/dtr-bars/index.html
@@ -1,8 +1,9 @@
 <body>
-	<div id="container" style="height:400px"></div>
+	<div id="container" style="height:400px;width: 50%;"></div>
 	<div id="drag"></div>
 	<div id="drop"></div>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="http://code.highcharts.com/highcharts.js"></script>
 <script src="https://rawgithub.com/highslide-software/draggable-points/master/draggable-points.js"></script>
 <script src="dtr-bars.js"></script>
