Adding quesitons work, so have to make new charts from questions now.

--- a/dtr-bars/index.html
+++ b/dtr-bars/index.html
@@ -12,9 +12,9 @@
 <body>
 	<div class="container">
 		<h1>Research Questions/Topics</h1>
-		<div id-"row-research" class="row">
-			<div class="col-xs-12">
-		    	<div id="new-question" class="input-group">
+		<div id="row-research" class="row">
+			<div id="new-question" class="col-xs-12">
+		    	<div class="input-group">
 		      		<input type="text" class="form-control" placeholder="Write in your Research Question/Topic">
 		      		<span class="input-group-btn">
 		        		<button class="btn btn-success" type="button">+</button>
