--- a/dtr-bars/index.html
+++ b/dtr-bars/index.html
@@ -24,9 +24,9 @@
 		</div>
 		
 	</div>
-	<div id="container" style="height:400px;width:50%;"></div>
+	<!-- <div id="container" style="height:400px;width:50%;"></div>
 	<div id="drag"></div>
-	<div id="drop"></div>
+	<div id="drop"></div> -->
 </body>
 <script src="http://code.highcharts.com/highcharts.js"></script>
 <script src="https://rawgithub.com/highslide-software/draggable-points/master/draggable-points.js"></script>
